load("@fourward//bazel:fourward_pipeline.bzl", "fourward_pipeline")
load("@gutil//gutil:diff_test.bzl", "cmd_diff_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fourward_server",
    srcs = ["fourward_server.cc"],
    hdrs = ["fourward_server.h"],
    data = [
        "@fourward//p4runtime:p4runtime_server",
    ],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@bazel_tools//tools/cpp/runfiles",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "fourward_switch",
    srcs = ["fourward_switch.cc"],
    hdrs = ["fourward_switch.h"],
    deps = [
        ":fourward_server",
        "@abseil-cpp//absl/status:statusor",
        "@grpc//:grpc++",
        "@gutil//gutil:status",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "//thinkit:switch",
    ],
)

cc_library(
    name = "fourward_oracle",
    srcs = ["fourward_oracle.cc"],
    hdrs = ["fourward_oracle.h"],
    deps = [
        ":fourward_server",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_infra/p4_runtime:p4_runtime_session_extras",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@fourward//p4runtime:dataplane_cc_grpc",
        "@fourward//p4runtime:dataplane_cc_proto",
        "@fourward//simulator:simulator_cc_proto",
        "@grpc//:grpc++",
        "@gutil//gutil:status",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_library(
    name = "test_vector_generation",
    testonly = True,
    srcs = ["test_vector_generation.cc"],
    hdrs = ["test_vector_generation.h"],
    deps = [
        ":fourward_oracle",
        ":trace_conversion",
        "//dvaas:test_vector",
        "//dvaas:test_vector_cc_proto",
        "//lib/p4rt:p4rt_port",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
    ],
)

cc_library(
    name = "trace_summary",
    srcs = ["trace_summary.cc"],
    hdrs = ["trace_summary.h"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@fourward//simulator:simulator_cc_proto",
    ],
)

cc_test(
    name = "trace_summary_test",
    srcs = ["trace_summary_test.cc"],
    deps = [
        ":trace_summary",
        "@fourward//simulator:simulator_cc_proto",
        "@googletest//:gtest_main",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "trace_conversion",
    srcs = ["trace_conversion.cc"],
    hdrs = ["trace_conversion.h"],
    deps = [
        "//dvaas:packet_trace_cc_proto",
        "@fourward//simulator:simulator_cc_proto",
    ],
)

# The v1model_sai.p4 include provides typed ports with @p4runtime_translation;
# its -I directory shadows stock v1model.p4.
fourward_pipeline(
    name = "sai_middleblock_fourward",
    src = "//sai_p4/instantiations/google:middleblock.p4",
    out = "sai_middleblock_fourward.binpb",
    out_format = "p4runtime",
    extra_srcs = ["//sai_p4:sai_p4_srcs"],
    includes = [
        "//sai_p4/fixed:v1model_sai.p4",
        "//sai_p4/instantiations/google:ids.h",
    ],
)

cc_test(
    name = "fourward_switch_test",
    srcs = ["fourward_switch_test.cc"],
    deps = [
        ":fourward_switch",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_test(
    name = "trace_conversion_test",
    srcs = ["trace_conversion_test.cc"],
    deps = [
        ":trace_conversion",
        "//dvaas:packet_trace_cc_proto",
        "@fourward//simulator:simulator_cc_proto",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
    ],
)

cc_binary(
    name = "trace_conversion_golden_test_runner",
    srcs = ["trace_conversion_golden_test_runner.cc"],
    deps = [
        ":trace_conversion",
        "//dvaas:packet_trace_cc_proto",
        "@fourward//simulator:simulator_cc_proto",
        "@protobuf//:protobuf",
    ],
)

cmd_diff_test(
    name = "trace_conversion_golden_test",
    actual_cmd = "$(execpath :trace_conversion_golden_test_runner)",
    expected = "trace_conversion_test.expected",
    tools = [":trace_conversion_golden_test_runner"],
)

cc_test(
    name = "fourward_oracle_test",
    srcs = ["fourward_oracle_test.cc"],
    data = [
        ":sai_middleblock_fourward",
    ],
    deps = [
        ":fourward_oracle",
        "@bazel_tools//tools/cpp/runfiles",
        "@fourward//simulator:simulator_cc_proto",
        "@googletest//:gtest_main",
        "@gutil//gutil:io",
        "@gutil//gutil:status_matchers",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_test(
    name = "fourward_server_test",
    srcs = ["fourward_server_test.cc"],
    deps = [
        ":fourward_server",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@gutil//gutil:status_matchers",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
    ],
)

cc_library(
    name = "fake_gnmi_service",
    hdrs = ["fake_gnmi_service.h"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@grpc//:grpc++",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
    ],
)

cc_test(
    name = "fake_gnmi_service_test",
    srcs = ["fake_gnmi_service_test.cc"],
    deps = [
        ":fake_gnmi_service",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@gutil//gutil:status_matchers",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
    ],
)

cc_library(
    name = "packet_bridge",
    srcs = ["packet_bridge.cc"],
    hdrs = ["packet_bridge.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/synchronization",
        "@abseil-cpp//absl/time",
        "@fourward//p4runtime:dataplane_cc_grpc",
        "@fourward//p4runtime:dataplane_cc_proto",
        "@grpc//:grpc++",
    ],
)

cc_test(
    name = "packet_bridge_test",
    srcs = ["packet_bridge_test.cc"],
    data = [
        "@fourward//p4runtime:p4runtime_server",
    ],
    deps = [
        ":fourward_server",
        ":packet_bridge",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "fourward_mirror_testbed",
    testonly = True,
    srcs = ["fourward_mirror_testbed.cc"],
    hdrs = ["fourward_mirror_testbed.h"],
    deps = [
        ":fake_gnmi_service",
        ":fourward_switch",
        ":packet_bridge",
        "@abseil-cpp//absl/status:statusor",
        "@grpc//:grpc++",
        "@gutil//gutil:status",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "//thinkit:bazel_test_environment",
        "//thinkit:mirror_testbed",
    ],
)

cc_test(
    name = "fourward_mirror_testbed_test",
    srcs = ["fourward_mirror_testbed_test.cc"],
    deps = [
        ":fourward_mirror_testbed",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
    ],
)

cc_test(
    name = "fourward_oracle_e2e_test",
    size = "large",
    srcs = ["fourward_oracle_e2e_test.cc"],
    data = [
        ":sai_middleblock_fourward",
    ],
    deps = [
        ":fourward_oracle",
        ":trace_summary",
        "//sai_p4/instantiations/google/test_tools:test_entries",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
        "@gutil//gutil:io",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)
