load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# licenses(["notice"])

# exports_files(["LICENSE"])

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "gutil_deps_bzl",
    srcs = ["gutil_deps.bzl"],
)

buildifier(
    name = "buildifier",
    exclude_patterns = ["./third_party/*"],
)
