# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "pins_control_device",
    testonly = 1,
    srcs = ["pins_control_device.cc"],
    hdrs = ["pins_control_device.h"],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//lib/p4rt:p4rt_programming_context",
        "//lib/p4rt:packet_listener",
        "//lib/validator:validator_lib",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:pd",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//tests/forwarding:util",
        "//tests/lib:switch_test_setup_helpers",
        "//thinkit:control_device",
        "//thinkit:packet_generation_finalizer",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@openconfig_gnoi//diag:diag_cc_grpc_proto",
        "@openconfig_gnoi//diag:diag_cc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_proto",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "ixia_helper",
    testonly = True,
    srcs = ["ixia_helper.cc"],
    hdrs = ["ixia_helper.h"],
    deps = [
        ":ixia_helper_cc_proto",
        "//lib/gnmi:gnmi_helper",
        "//lib/utils:json_utils",
        "@p4_infra//netaddr:ipv4_address",
        "@p4_infra//netaddr:ipv6_address",
        "@p4_infra//netaddr:mac_address",
        "//thinkit:generic_testbed",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/functional:function_ref",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:collections",
        "@gutil//gutil:overload",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "ixia_helper_test",
    srcs = ["ixia_helper_test.cc"],
    deps = [
        ":ixia_helper",
        ":ixia_helper_cc_proto",
        "//lib/utils:json_test_utils",
        "//lib/utils:json_utils",
        "//thinkit:generic_testbed",
        "//thinkit:mock_generic_testbed",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
    ],
)

proto_library(
    name = "ixia_helper_proto",
    srcs = ["ixia_helper.proto"],
    deps = ["@protobuf//:struct_proto"],
)

cc_proto_library(
    name = "ixia_helper_cc_proto",
    deps = [":ixia_helper_proto"],
)

cc_library(
    name = "basic_switch",
    hdrs = ["basic_switch.h"],
    deps = [
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnoi//cert:cert_cc_grpc_proto",
        "@openconfig_gnoi//diag:diag_cc_grpc_proto",
        "@openconfig_gnoi//factory_reset:factory_reset_cc_grpc_proto",
        "@openconfig_gnoi//os:os_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "alpine_switch",
    hdrs = ["alpine_switch.h"],
    deps = [
        ":basic_switch",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "basic_switch_test",
    srcs = ["basic_switch_test.cc"],
    deps = [
        ":basic_switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnoi//cert:cert_cc_grpc_proto",
        "@openconfig_gnoi//diag:diag_cc_grpc_proto",
        "@openconfig_gnoi//factory_reset:factory_reset_cc_grpc_proto",
        "@openconfig_gnoi//os:os_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "lacp_ixia_helper",
    testonly = True,
    srcs = ["lacp_ixia_helper.cc"],
    hdrs = ["lacp_ixia_helper.h"],
    deps = [
        ":ixia_helper",
        "//thinkit:generic_testbed",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:overload",
    ],
)

cc_test(
    name = "lacp_ixia_helper_test",
    srcs = ["lacp_ixia_helper_test.cc"],
    deps = [
        ":ixia_helper",
        ":lacp_ixia_helper",
        "//lib/utils:json_test_utils",
        "//thinkit:generic_testbed",
        "//thinkit:mock_generic_testbed",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "ixia_protocol_helper",
    testonly = True,
    srcs = ["ixia_protocol_helper.cc"],
    hdrs = ["ixia_protocol_helper.h"],
    deps = [
        ":ixia_helper",
        "//thinkit:generic_testbed",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "ixia_protocol_helper_test",
    srcs = ["ixia_protocol_helper_test.cc"],
    deps = [
        ":ixia_protocol_helper",
        "//lib/utils:json_test_utils",
        "//thinkit:generic_testbed",
        "//thinkit:mock_generic_testbed",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "otg_helper",
    testonly = True,
    srcs = ["otg_helper.cc"],
    hdrs = ["otg_helper.h"],
    deps = [
        "@grpc//:grpc++",
        "@com_github_otg_models//:otg_cc_proto",
        "@com_github_otg_models//:otg_grpc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "otg_helper_test",
    srcs = ["otg_helper_test.cc"],
    deps = [
        ":otg_helper",
        "@grpc//:grpc++",
        "@com_github_otg_models//:otg_cc_proto",
        "@com_github_otg_models//:otg_grpc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
    ],
)
